<resources>
    <string name="app_name">Avaliacao2</string>
    <string name="splash_msg">ApPinga</string>
    <string name="tintos_msg">Tintos</string>
    <string name="brancos_msg">Brancos</string>
    <string name="outros_msg">Outros</string>
    <string name="t_periquita">Periquita Tinto</string>
    <string name="r_periquita">Periquita Reserva</string>
    <string name="t_ea">EA Tinto</string>
    <string name="b_peramanca">Peramanca Branco</string>
    <string name="b_opta">Opta Branco</string>
    <string name="b_montevelho">Monte Velho Branco</string>
    <string name="title">ApPinga</string>
    <string name="dialog_message">Tem idade legal para consumir bebidas alcóolicas?</string>
    <string name="opt_positiva">Sim</string>
    <string name="opt_negativa">Não</string>
    <string name="msg_title">Idade legal</string>
    <string name="o_periquita_rose">Periquita Rosé</string>
    <string name="preco_b_peramanca">43.99 €</string>
    <string name="desc_b_peramanca">Garrafa de 0.75ml Peramanca Branco</string>
    <string name="desc_b_opta">Garrafa de 0.75ml Opta Branco</string>
    <string name="preco_b_opta">4.69 €</string>
    <string name="preco_b_montevelho">3.89 €</string>
    <string name="preco_o_periquita">4.56 €</string>
    <string name="o_portocomenda">Porto Comenda Rosé</string>
    <string name="preco_o_portocomenda">16 €</string>
    <string name="preco_o_quintadavegia">9.21 €</string>
    <string name="o_quintadavegia">Quinta da Vegia Rosé</string>
    <string name="desc_o_quintadavegia">Garrafa de 0.75ml Quinta da Vegia Rosé</string>
    <string name="desc_t_periquita">Garrafa de 0.75ml Periquita Tinto</string>
    <string name="desc_b_montevelho">Garrafa de 0.75ml Monte Velho Branco</string>
    <string name="desc_t_ea">Garrafa de 0.75ml EA Tinto</string>
    <string name="desc_o_periquita">Garrafa de 0.75ml Periquita Rosé</string>
    <string name="desc_o_portocomenda">Garrafa de 0.75ml Porto Comenda Rosé</string>
    <string name="preco_t_periquita">3.99 €</string>
    <string name="desc_t_periquitareserva">Garrafa de 0.75ml Periquita Reserva Tinto</string>
    <string name="preco_t_periquitareserva">7.80 €</string>
    <string name="preco_t_ea">9.25 €</string>
    <string name="btn_txt_comprar">Comprar</string>
    <string name="website_msg">ApPinga Website</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>