<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-178dp"
            tools:layout_editor_absoluteY="365dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tintos_msg"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_titulo_t_periquita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="20dp"
                android:text="@string/t_periquita"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/img_t_periquita"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/desc_t_periquita"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/tinto1" />

            <TextView
                android:id="@+id/txt_desc_o_periquita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_t_periquita"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Preço: "
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/txt_preco_t_periquita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_t_periquita"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_buy_t_periquita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_comprar" />

            <TextView
                android:id="@+id/txt_titulo_t_periquitareserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/r_periquita"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_t_periquitareserva"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/tinto2" />

            <TextView
                android:id="@+id/txt_desc_t_periquitareserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_t_periquitareserva"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Preço: "
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/txt_preco_t_periquitareserva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_t_periquitareserva"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_buy_t_periquitareserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_comprar" />

            <TextView
                android:id="@+id/txt_titulo_t_ea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/t_ea"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_quintadavegia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/tinto3" />

            <TextView
                android:id="@+id/txt_desc_t_ea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_t_ea"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Preço: " />

                <TextView
                    android:id="@+id/txtView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_t_ea"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_buy_t_ea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_comprar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>