<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Outros">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-178dp"
            tools:layout_editor_absoluteY="365dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outros_msg"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_titulo_o_periquita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="20dp"
                android:text="@string/o_periquita_rose"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/img_t_periquita"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/rose" />

            <TextView
                android:id="@+id/txt_desc_o_periquita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_o_periquita"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Preço: "
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/txt_preco_o_periquita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_o_periquita"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_titulo_o_portocomenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/o_portocomenda"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_o_portocomenda"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/rose1" />

            <TextView
                android:id="@+id/txt_desc_o_portocomenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_o_portocomenda"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Preço: "
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/txt_preco_o_portocomenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_o_portocomenda"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_titulo_t_ea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/o_quintadavegia"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_quintadavegia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/rose2" />

            <TextView
                android:id="@+id/txt_desc_o_quintadavegia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_o_quintadavegia"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Preço: "
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txt_preco_o_quintadavegia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="200dp"
                    android:paddingStart="20dp"
                    android:text="@string/preco_o_quintadavegia"
                    android:textAlignment="viewStart" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>